Fixed the newly introduced scrollbar UI-bugs

--- a/src/component/sidebar/user/user.use.scss
+++ b/src/component/sidebar/user/user.use.scss
@@ -16,26 +16,19 @@ div.user-content {
   transition: all 0.1s ease-out;
 }
 
-div.profile {
+a.profile {
   grid-area: profile;
   height: 5rem;
   margin: 0;
   padding: 0;
   width: 5rem;
 
-  a {
+  div.pic {
     display: block;
-
-    height: 5rem;
-    margin: 0;
-    width: 5rem;
-
-    img {
-      height: 5rem;
-      margin: 0;
-      padding: 0.8rem;
-      width: 5rem;
-    }
+    float: right;
+    height: 2em;
+    margin: 0.8rem;
+    width: 2em;
   }
 }
 
