--- a/src/style/_colors.sass
+++ b/src/style/_colors.sass
@@ -11,6 +11,7 @@ $color-cion-text: #000
 $color-cion-background-primary: #E5E5E5
 $color-cion-background-secondary: #fff
 $color-cion-background-tertiary: darken($color-cion-quinary, 10%)
+$color-cion-background-transparent: rgba(255, 255, 255, 0.75)
 
 $color-cion-loading: $color-cion-primary
 $color-cion-done: #00D403
